<resources>
    <string name="app_name">Online Waiter</string>
    <string name="act_main_btn_login">Login</string>
    <string name="act_main_btn_application">Application</string>
    <string name="act_main_logo_description">Online waiter logo</string>
    <string name="act_main_pager_app_purpose_header">This App Purpose:</string>
    <string name="act_main_pager_app_user_purpsoe_header">User Task:</string>
    <string name="act_main_pager_no_news">No News</string>
    <string name="act_main_pager_more_description"><a href="https://github.com/GeneralSting">More about</a></string>
    <string name="act_main_dialog_permissions_warning_body">You need to allow all asked permissions. If you disable them, You will not be able to procced!</string>
    <string name="act_main_dialog_permissions_warning_header">Alert message!</string>
    <string name="act_main_dialog_permissions_denied_header">Permissions denied!</string>
    <string name="act_main_dialog_permissions_denied_body">You will not be asked again for permissions but we can not allow you to go any further with this app!</string>
    <string name="act_main_dialog_number_changed_header">You are logout.</string>
    <string name="act_main_dialog_number_changed_body">Owner has changed option to log in with the phone number you used to log in with</string>
    <string name="act_login_check_otp_code">Verify OTP</string>
    <string name="act_login_enter_otp_code">Enter received OTP</string>
    <string name="act_login_send_otp_code">Send phone number</string>
    <string name="act_login_phone_number_example">+1 650–555–1234</string>
    <string name="act_login_enter_phone_number">Enter phone number</string>
    <string name="act_login_successful_taken_number">Your number has been entered</string>
    <string name="act_login_dialog_no_number_header">Number retrieval failed</string>
    <string name="act_login_dialog_no_number_body">The mobile operator does not allow access to the mobile number, enter the mobile number yourself.</string>
    <string name="act_login_dialog_shared_number_header">The application saves the entered number</string>
    <string name="act_login_dialog_shared_number_body">The mobile operator does not allow access to the mobile phone number, the application saves the number to enable easier registration</string>
    <string name="act_login_phone_number_incorrect">Enter valid phone Number.</string>
    <string name="act_login_phone_number_same">Entered number is currently registered as your number</string>
    <string name="act_login_otp_sent">OTP Sent!</string>
    <string name="act_login_empty_otp">Enter received OTP!</string>
    <string name="act_login_wrong_otp">Entered wrong OTP!</string>
    <string name="act_login_dialog_no_user_header">Number not found!</string>
    <string name="act_login_dialog_no_user_body">The number you entered is not included in the system, so it is not possible to log in with the entered number.</string>
    <string name="act_login_verification_failed">An error occurred, please try again</string>
    <string name="act_login_number_not_allowed">Object owner disabled login with that number</string>
    <string name="act_login_select_cafe_title">Select object</string>
    <string name="act_employee_back_button_pressed">One more time to logout.</string>
    <string name="act_employee_notification_header">Order ready for table:</string>
    <string name="act_employee_notification_body">Your order is ready to be delivered to table number:</string>
    <string name="act_employee_deleted_notification_header">Order is deleted for table:</string>
    <string name="act_employee_deleted_notification_body">Your received message from waiter</string>
    <string name="act_employee_order_fab_txt">Number of drinks in current order:</string>
    <string name="act_employee_empty_order_fab_txt">Order is empty</string>
    <string name="act_employee_drink_deleted_title">Deleted drink:</string>
    <string name="act_employee_drink_deleted_body">This drink was in your current order, it is deleted and removed from order</string>
    <string name="act_employee_search_query_menu">Drink name…</string>
    <string name="act_employee_search_query_orders">Table number…</string>
    <string name="act_employee_drink_no_quantity_body">This drink was in your current order, the drink has no available quantity</string>
    <string name="act_employee_drink_quantity_change_title">Quantity change for drink:</string>
    <string name="act_employee_drink_quantity_change_body">Drink in current order does not have required quantity, the remaining amount is set to drink</string>
    <string name="act_employee_drink_negative_quantity_title">Negative quantity:</string>
    <string name="act_employee_drink_negative_quantity_body">Drink quantity was negative. App set quantity to zero (0), please check drink availability</string>
    <string name="act_employee_report_bug_title">Bug Report</string>
    <string name="act_employee_report_bug_et_hint">Bug description</string>
    <string name="act_employee_report_bug_condition">Enter at least 10 characters</string>
    <string name="act_emplyoee_report_bug_successful">Report sent. Thank you!</string>
    <string name="menu_drink_name_placeholder">Drink Name</string>
    <string name="menu_drink_description_placeholder">Drink Description</string>
    <string name="menu_drink_price_placeholder">0.00$</string>
    <string name="menu_drink_description_dialog_title">Description for a drink: </string>
    <string name="menu_search_no_result">No matched results</string>
    <string name="order_drink_name_txt">Drink Name</string>
    <string name="order_drink_price_txt">Price: </string>
    <string name="order_drink_total_price_txt">Total price: </string>
    <string name="order_summary_amount_empty">No Products.</string>
    <string name="order_summary_amount">Products.</string>
    <string name="order_summary_total_price_zero">0.00</string>
    <string name="order_dialog_complete_btn">Make Order</string>
    <string name="order_dialog_title">Order for table: </string>
    <string name="order_dialog_cb_order">Order for my number</string>
    <string name="order_table_number_empty">Enter order\'s table number</string>
    <string name="order_table_number_hint" translatable="false">1-</string>
    <string name="order_web_no_registered">Web app not logged in!</string>
    <string name="cafe_update_menu_txt">Update menu</string>
    <string name="cafe_update_new_drink_txt">Add new drink</string>
    <string name="cafe_update_tables_txt">Update tables</string>
    <string name="cafe_update_drink_iv_description">Drink image</string>
    <string name="cafe_update_drink_ib_accept_description">Accept changes</string>
    <string name="cafe_update_drink_ib_remove_description">Delete drink</string>
    <string name="cafe_update_drink_no_change">No change to update</string>
    <string name="cafe_update_drink_remove_dialog_title">Delete drink:</string>
    <string name="cafe_update_drink_remove_dialog_order_title">Delete drink (Drink in order):</string>
    <string name="cafe_update_drink_image_picker_camera">Camera</string>
    <string name="cafe_update_drink_image_picker_gallery">Gallery</string>
    <string name="cafe_update_drink_new_image_uploading">Saving drink image…</string>
    <string name="cafe_update_drink_image_uploading">Updating drink image…</string>
    <string name="cafe_update_drink_name_condition_failed">Drink name 1–25 characters</string>
    <string name="cafe_update_drink_description_condition_failed">Drink description 1–60 characters</string>
    <string name="cafe_update_drink_price_condition_failed">Drink price 0.00–999999.99</string>
    <string name="cafe_update_drink_quantity_condition_failed">Drink quantity 0–999999999</string>
    <string name="cafe_update_drink_price_input_failed">Incorrect price input</string>
    <string name="cafe_update_drink_quantity_input_failed">Drink quantity not filled</string>
    <string name="cafe_update_drink_info_uploading">Updating drink information…</string>
    <string name="cafe_update_drink_deletion">Deleting drink…</string>
    <string name="cafe_update_new_drink_dialog_title">New drink for category:</string>
    <string name="cafe_update_drink_price_incorrect">Incorrect price input</string>
    <string name="cafe_update_new_drink_price_hint">2.00</string>
    <string name="cafe_update_new_drink_quantity_hint">Quantity</string>
    <string name="cafe_update_new_drink_successfully_added">Successfully added new drink</string>
    <string name="cafe_update_drink_update_successful">Drink update successful</string>
    <string name="cafe_update_drink_info_update_successful">Menu informations updated successfully</string>
    <string name="cafe_update_drink_img_update_successful">Drink image update successful</string>
    <string name="cafe_update_new_drink_adding">Adding new drink…</string>
    <string name="cafe_update_current_tables">Current tables:</string>
    <string name="cafe_update_new_tables_state">New state:</string>
    <string name="cafe_update_new_tables_state_hint">1234</string>
    <string name="cafe_update_update_tables_title">Update object tables state</string>
    <string name="cafe_update_tables_state_zero">Table number cannot be 0</string>
    <string name="cafe_update_table_state_empty">Enter new tables state</string>
    <string name="cafe_update_tables_state_updated">Tables state updated</string>
    <string name="cafe_update_tables_state_same">Entered current state, nothing to update</string>
    <string name="cafe_update_drink_already_deleted">Drink is already deleted</string>
    <string name="pending_orders_order_pending">Order is waiting for table:</string>
    <string name="pending_orders_order_declined">Order is declined for table:</string>
    <string name="pending_orders_order_ready">Order is ready for table:</string>
    <string name="pending_orders_btn_look_order">Look order</string>
    <string name="pending_orders_btn_order_pending">Delete</string>
    <string name="pending_orders_btn_order_declined">Message</string>
    <string name="pending_orders_btn_order_ready">Paid</string>
    <string name="pending_orders_overview_dialog_title">Current order drinks:</string>
    <string name="pending_orders_drink_name_col">Name</string>
    <string name="pending_orders_drink_amount_col">Amount</string>
    <string name="pending_orders_drink_price_col">Price</string>
    <string name="pending_orders_drink_name_total">TOTAL</string>
    <string name="pending_orders_switch_all">All orders</string>
    <string name="employee_nav_menu_title">Menu</string>
    <string name="employee_nav_orders_title">Order</string>
    <string name="employee_nav_pending_orders_title">Pending Orders</string>
    <string name="employee_nav_cafe_update_title">Object Update</string>
    <string name="employee_nav_logout_title">Logout</string>
    <string name="owner_nav_main_title">Main</string>
    <string name="owner_nav_statistics_title">Statistics</string>
    <string name="owner_nav_registered_numbers_title">Numbers</string>
    <string name="owner_nav_logout_title">Logout</string>
    <string name="statistics_tv_title">Statistics</string>
    <string name="statistics_btn_employees">Employees (numbers)</string>
    <string name="statistics_btn_drinks">Drinks</string>
    <string name="statistics_btn_tables">Tables</string>
    <string name="database_on_cancel_dialog_header">Server error! We are working on it.</string>
    <string name="database_on_cancel_dialog_description">Try restarting the application. If it still doesn\'t work, there\'s a chance that the app\'s actions aren\'t being executed.</string>
    <string name="i_understand">I Understand</string>
    <string name="drink_btn_add_placeholder" translatable="false">+</string>
    <string name="drink_btn_remove_placeholder" translatable="false">-</string>
    <string name="drink_amount_placeholder" translatable="false">0</string>
</resources>