<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_employee_menu">

    <fragment
        android:id="@+id/nav_employee_menu"
        android:name="com.example.onlinewaiter.employeeUI.menu.MenuFragment"
        android:label="@string/employee_nav_menu_title"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_employee_orders"
        android:name="com.example.onlinewaiter.employeeUI.order.OrderFragment"
        android:label="@string/employee_nav_orders_title"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_employee_pending_orders"
        android:name="com.example.onlinewaiter.employeeUI.pendingOrders.PendingOrdersFragment"
        android:label="@string/employee_nav_pending_orders_title"
        tools:layout="@layout/fragment_pending_orders" />

    <fragment
        android:id="@+id/nav_employee_cafe_update"
        android:name="com.example.onlinewaiter.employeeUI.cafeUpdate.CafeUpdateFragment"
        android:label="@string/employee_nav_cafe_update_title"
        tools:layout="@layout/fragment_cafe_update" />
</navigation>