<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/owner_main_bg"
    tools:context=".ownerUI.statistics.StatisticsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/statistics_tv_title"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="90dp"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <Button
                android:id="@+id/btnStatisticsEmployees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistics_btn_employees"
                android:backgroundTint="@color/cv_cafe_update_blue_overlay"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnStatisticsDrinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistics_btn_drinks"
                android:backgroundTint="@color/cv_cafe_update_green_overlay"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnStatisticsTables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistics_btn_tables"
                android:backgroundTint="@color/cv_cafe_update_purple_overlay"
                android:layout_weight="1" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>