<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_act_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivMainAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="226dp"
        android:contentDescription="@string/act_main_logo_description"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMainLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/act_main_btn_login"
        android:textSize="32sp"
        android:elevation="4dp"
        android:translationZ="4dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivMainAppLogo"
        app:layout_constraintStart_toStartOf="@+id/ivMainAppLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMainApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/tumbleweed"
        android:drawableEnd="@drawable/ic_question_mark_20"
        android:text="@string/act_main_btn_application"
        android:textSize="20sp"
        android:elevation="4dp"
        android:translationZ="4dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivMainAppLogo"
        app:layout_constraintStart_toStartOf="@+id/ivMainAppLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>