<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="2dp"
    app:cardBackgroundColor="@color/drink_card_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivMenuDrinkItem"
            android:layout_width="100dp"
            android:layout_height="133dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMenuDrinkItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/menu_drink_name_placeholder"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/vglMenuDrinkItemSecondSection"
            app:layout_constraintStart_toStartOf="@+id/vlgMenuDrinkItemFirstSection"
            app:layout_constraintTop_toTopOf="@+id/ivMenuDrinkItem" />

        <TextView
            android:id="@+id/tvMenuDrinkItemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:maxLength="45"
            android:text="@string/menu_drink_description_placeholder"
            app:layout_constraintEnd_toStartOf="@+id/vglMenuDrinkItemSecondSection"
            app:layout_constraintStart_toStartOf="@+id/vlgMenuDrinkItemFirstSection"
            app:layout_constraintTop_toBottomOf="@+id/tvMenuDrinkItemName" />

        <TextView
            android:id="@+id/tvMenuDrinkItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/menu_drink_price_placeholder"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivMenuDrinkItem"
            app:layout_constraintStart_toStartOf="@+id/vlgMenuDrinkItemFirstSection" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vlgMenuDrinkItemFirstSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vglMenuDrinkItemSecondSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hglMenuDrinkItemDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/ivMenuDrinkItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vglMenuDrinkItemSecondSection"
            app:layout_constraintTop_toTopOf="@+id/ivMenuDrinkItem">


            <Button
                android:id="@+id/btnMenuDrinkItemAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_positive"
                android:includeFontPadding="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/drink_btn_add_placeholder"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvMenuDrinkItemAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/drink_amount_placeholder"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnMenuDrinkItemRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red_negative"
                android:includeFontPadding="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/drink_btn_remove_placeholder"
                android:textAlignment="center"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>